# GoldenEye-Recomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ge_config.toml
.github/workflows/: build.yml
android/: README.md  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sunjaycy/goldeneye/: GoldenEyeActivity.java  WeaponMenuPresentation.java
docs/: HANDOFF-arm64-first-frame-freeze.md  HANDOFF-thor-gameplay-lockup.md  HANDOFF-weapon-scrollwheel-select.md  HANDOFF-weapon-switch-direct-call.md  RELEASING.md  boot-startup-race.md  ds-game-state-bridge.md  ds-integration.md  kbm-mouselook-sdd.md
docs/superpowers/plans/: 2026-07-02-weapon-scrollwheel-select.md  2026-07-03-perf-input-smoothing.md
docs/superpowers/specs/: 2026-07-02-weapon-scrollwheel-select-design.md
scripts/: cut-release.sh  perf_report.py
src/: ge_android_ds.cpp  ge_app.h  ge_dualscreen.cpp  ge_dualscreen.h  ge_fps.cpp  ge_fps.h  ge_gamestate.cpp  ge_gamestate.h  ge_hooks.cpp  ge_menu.cpp  ge_menu.h  ge_postfx.cpp  ge_weaponmenu.cpp  ge_weaponmenu.h
